--- a/index.html
+++ b/index.html
@@ -50,12 +50,18 @@
                 <h2>languages</h2>
             </div>
             <div class="languages-icons">
-                <img src="./img/languages.svg" alt="">
+                <img src="./img/html.svg" alt="">
+                <img src="./img/css.svg" alt="">
+                <img src="./img/js.svg" alt="">
+                <img src="./img/sass.svg" alt="">
+                <img src="./img/react.svg" alt="">
             </div>
         </div>
         <div class="tools">
             <div class="tools-icons">
-                <img src="./img/tools.svg" alt="">
+                <img src="./img/figma.svg" alt="">
+                <img src="./img/vs.svg" alt="">
+                <img src="./img/git.svg" alt="">
             </div>
             <div class="section-title">
                 <div class="section-t-bg"></div>
@@ -95,13 +101,13 @@
                     <div class="icon">
                         <img src="./img/resume.svg" alt="">
                     </div>
-                    <h6>resumé.pdf</h6>
+                    <a href="#">resumé.pdf</a>
                 </div>
                 <div class="link">
                     <div class="icon">
                         <img src="./img/linkedin.svg" alt="">
                     </div>
-                    <h6>linkedin</h6>
+                    <a href="https://www.linkedin.com/in/joyciane/">Linkedin</a>
                 </div>
             </div>
             <div class="column">
@@ -109,13 +115,13 @@
                     <div class="icon">
                         <img src="./img/be.svg" alt="">
                     </div>
-                    <h6>behance</h6>
+                    <a href="https://www.behance.net/joyci">Behance</a>
                 </div>
                 <div class="link">
                     <div class="icon">
                         <img src="./img/github.svg" alt="">
                     </div>
-                    <h6>github</h6>
+                    <a href="https://github.com/kisuquinho">Github</a>
                 </div>
             </div>
         </div>
@@ -123,5 +129,8 @@
     <footer>
         <p>joyci©2023</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js" integrity="sha512-Q+G390ZU2qKo+e4q+kVcJknwfGjKJOdyu5mVMcR95NqL6XaF4lY4nsSvIVB3NDP54ACsS9rqhE1DVqgpApl//Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
